INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src/tEngine)

AUX_SOURCE_DIRECTORY(. SRC_DIR)
ADD_LIBRARY(tEngine SHARED ${SRC_DIR})

TARGET_LINK_LIBRARIES(tEngine pthread)
TARGET_LINK_LIBRARIES(tEngine dl)

SET(CMAKE_C_FLAGS "-O0 -g -ggdb -fPIC -shared")
SET(CMAKE_CXX_FLAGS "-O0 -g -ggdb -fPIC -shared -std=c++11")
SET_TARGET_PROPERTIES(tEngine PROPERTIES OUTPUT_NAME tEngine)